# algorithm

./: CMakeLists.txt  README.md  main.cpp
include/: lp_array.h  lp_dynamic.h  lp_stack.h
src/: CMakeLists.txt
src/array/: lp_array.cpp  lp_remove_dupplicate.cpp
src/dynamic/: lp_trap.cpp
src/stack/: lp_stack.cpp
